--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,20 +1,27 @@
-
 body{
     height: 100vh;
     width: 100%;
     margin: 0;
-    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
     font-weight: 400;
-    color: rgba(255, 255, 255, 0.87);
-    background-color: #242424;
+    color: rgb(205, 202, 202);
+    background-color: #353535;
     height: 100%;
     width: 100%;
-   
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    font-weight: 400;
+  
+    
 }
 
 #root{
     height: 100%;
     width: 100%;
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    font-weight: 400;
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale; 
 }
 
