--- a/client/src/components/Navbar/Navbar.module.css
+++ b/client/src/components/Navbar/Navbar.module.css
@@ -1,14 +1,17 @@
 .navbar{
     background-color: #f8f8f0;
-    border-bottom: 2px solid #ccc;
-    box-shadow: 0 0 3px #ccc;
+    /* border-bottom: 2px solid #081c34; */
+    box-shadow: 0 0 5px #f8f8f0;
     padding: 0 1rem;
-    font-family: inherit;
+    font-family: "Paytone One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    height: 80px;
 
 }
 
 .nav_items{
-    color: #346286;
+    color: #081c34;
     margin-bottom: 0;
     padding: 1rem 0;
     cursor: pointer;
@@ -30,10 +33,16 @@ ul{
 
 .img_container{
     height: 70px;
+    transition: transform 0.4s ease;
+    cursor: pointer;
 }
 
 .img{
     height: 100%;
     width: 100%;
     object-fit: cover;
+}
+
+.img_container:hover{
+    transform: scale(1.05);
 }
