--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,9 +5,7 @@ body{
     line-height: 1.5;
     font-weight: 400;
     color: rgb(205, 202, 202);
-    background-color: #353535;
-    height: 100%;
-    width: 100%;
+    background-color: #f8f8f0;
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     font-weight: 400;
   
