--- a/client/src/components/Navbar/Navbar.module.css
+++ b/client/src/components/Navbar/Navbar.module.css
@@ -8,7 +8,7 @@
     font-style: normal;
 }
 
-.nav_items{
+.nav_items, .nav_itemss, .user_name{
     color: #081c34;
     margin-bottom: 0;
     padding: 1rem 0;
@@ -16,7 +16,7 @@
     font-size: 16px;
     transition: transform 0.4s ease;
     font-family: inherit;
-    margin-left: 15px;
+    text-align: center;
 }
 
 
@@ -27,6 +27,15 @@ ul{
 }
 
 .nav_items:hover{
+    color: #5191c3;
+    transform: scale(1.05);
+}
+
+.user_name:hover{
+    color: #5191c3;
+    transform: scale(1.05);
+}
+.nav_itemss:hover{
     color: #5191c3;
     transform: scale(1.05);
 }
@@ -108,10 +117,12 @@ ul{
 
 
 @media (max-width: 768px) {
-    .icon_container {
+    .user_name, .icon_container {
         display: none;
     }
-
+    .navbar .icon_container {
+        display: none !important;
+    }
     .ul {
         display: flex;
         flex-direction: column;
@@ -128,5 +139,12 @@ ul{
         flex-direction: column;
         justify-content: center;
         gap: 0;
+    }
+}
+
+
+@media (min-width: 768px) { 
+    .nav_itemss{
+        margin-left: 15px;
     }
 }
